transit_model_procmacro/tests/02-invalid-weight.stderr
error: proc-macro derive panicked
 --> $DIR/02-invalid-weight.rs:6:10
  |
6 | #[derive(GetCorresponding)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: `weight` attribute must be convertible to f64: ParseFloatError { kind: Invalid }
